# libkmip

./: Makefile  meson.build  meson_options.txt
demos/: demo_getattr.c  demo_rekey.c
include/: kmip.h  kmip_bio.h  kmip_io.h
src/: kmip.c  kmip_bio.c  kmip_io.c
tests/: tests.c
